--- a/style.css
+++ b/style.css
@@ -13,11 +13,10 @@ body {
 .container {
     display: grid;
     grid-template-columns: 2fr 1fr;
-    grid-template-rows: 0.8fr 0.7fr 3fr;
     grid-template-areas:
     "header header"
-    "aside aside"
-    "main sidebar"
+    "top-section top-section"
+    "main sidebar";
 }
 
 header {
@@ -33,7 +32,6 @@ header span {
 header h1 {
     color: white;
     font-size: 60px;
-    margin-top: 40px;
     margin-bottom: 10px;
 }
 
@@ -51,11 +49,10 @@ header a {
 }
 
 .email-adress {
-    margin-top: 0;
     margin-bottom: 30px;
 }
 
-aside, main, .sidebar {
+section, main, .sidebar {
     background-color: #ece6e6;
 }
 
@@ -66,10 +63,10 @@ aside, main, .sidebar {
     font-size: 18px;
 }
 
-aside {
+section {
     display: flex;
     align-items: center;
-    grid-area: aside;
+    grid-area: top-section;
     padding: 20px;
 }
 
@@ -85,7 +82,7 @@ aside {
     align-self:flex-start;
 }
 
-aside img{
+section img{
     border: 1px solid black;
     border-radius: 100%;
     border-bottom: 2px solid white;
@@ -129,6 +126,8 @@ h2 {
     border-bottom: 2px solid #b9a9a9;
     margin: 20px;
     padding-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 li {
@@ -159,12 +158,91 @@ main li {
     font-weight: bold;
 }
 
+.occupation {
+    text-align: left;
+    margin-left: 30px;
+    margin-bottom: 0;
+}
+
 .employer {
     text-align: left;
     margin-left: 30px;
-    font-weight: bold;
+    margin-top: 5px;
 }
 
 .location {
     font-style: italic;
+}
+
+aside .logo-video {
+    width: 280px;
+    height: 260px;
+    margin-top: 45px;
+    margin-left: 3px;
+}
+
+@media screen and (max-width: 860px) {
+    .container {
+        display: block;
+        margin: 0;
+    }
+
+    header h1 {
+        margin-top: 0;
+        padding: 2px;
+    }
+    .email-adress {
+        padding-bottom: 10px;
+        margin: 0;
+    }
+
+    section {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    section img {
+        width: 250px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .sidebar h2 {
+        font-size: 30px;
+        text-align: center;
+        margin: 0 auto;
+        padding: 10px;
+    }
+
+    .sidebar {
+        display: flex;
+        flex-direction: column;     
+    }
+
+    .sidebar ul {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .sidebar li {
+        min-width: 200px;
+    }
+
+    main ul:last-child {
+        border: none;
+        margin-bottom: 0;
+    }
+
+    aside {
+        display: flex;
+        justify-content: center;
+    }
+
+    aside .logo-video {
+        margin-top: 0;
+    }
+
+    main ul {
+        border-bottom: 1px solid #b9a9a9;
+    }
 }
